--- a/rangiffler-userdata/src/main/resources/application.yaml
+++ b/rangiffler-userdata/src/main/resources/application.yaml
@@ -56,7 +56,8 @@ logging:
     net.devh.boot.grpc.server: DEBUG
 
   pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} trace=%X{trace_id} span=%X{span_id} - %msg%n"
+
 
 ---
 spring:
