--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ build
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+/otel/opentelemetry-javaagent.jar
+
 ### STS ###
 .apt_generated
 .classpath
