feat(photo, gateway): add MinIO storage with gateway media endpoint; keep BLOB fallback
- Store relative objectKey in photo_url instead of base64
- Gateway: /media/** serves files from MinIO
- Config: app.media.mode (BLOB|OBJECT), bucket, minio.endpoint

--- a/rangiffler-photo/build.gradle
+++ b/rangiffler-photo/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     implementation project(':rangiffler-grpc-common')
     implementation project(':rangiffler-events-common')
 
+    implementation 'io.minio:minio:8.5.9'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation('org.springframework.boot:spring-boot-starter-web-services') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
