--- a/rangiffler-userdata/build.gradle
+++ b/rangiffler-userdata/build.gradle
@@ -10,6 +10,7 @@ version = '1.0'
 dependencies {
     implementation project(':rangiffler-grpc-common')
     implementation project(':rangiffler-events-common')
+    implementation project(':rangiffler-media-common')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation('org.springframework.boot:spring-boot-starter-web-services') {
@@ -21,11 +22,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "net.devh:grpc-server-spring-boot-starter:${project.ext.springGrpcVersion}"
     implementation "org.springframework.kafka:spring-kafka:3.3.2"
-//    implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
+    implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
+
+    // --- Работа с изображениями (MinIO + thumbnail (small avatar) + декодер WebP) ---
+    implementation "io.minio:minio:${project.ext.minioVersion}"
     implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
+    implementation "com.twelvemonkeys.imageio:imageio-webp:${project.ext.imageioWebpVersion}"
 
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     compileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
+
+    // БД, миграции
     runtimeOnly "mysql:mysql-connector-java:8.0.33"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
     implementation "org.flywaydb:flyway-mysql:${project.ext.flywayVersion}"
