--- a/rangiffler-photo/build.gradle
+++ b/rangiffler-photo/build.gradle
@@ -10,6 +10,7 @@ version = '1.0'
 dependencies {
     implementation project(':rangiffler-grpc-common')
     implementation project(':rangiffler-events-common')
+    implementation project(':rangiffler-media-common')
 
     implementation 'io.minio:minio:8.5.9'
 
@@ -18,13 +19,15 @@ dependencies {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
     implementation "net.devh:grpc-client-spring-boot-starter:${project.ext.springGrpcVersion}"
+    implementation "net.devh:grpc-server-spring-boot-starter:${project.ext.springGrpcVersion}"
+    implementation "com.google.protobuf:protobuf-java:3.25.5"
+    implementation "com.google.protobuf:protobuf-java-util:3.25.5"
     implementation "com.google.protobuf:protobuf-java-util:3.25.5"
     implementation "org.springframework.kafka:spring-kafka:${project.ext.springKafkaVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-commons'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation "net.devh:grpc-server-spring-boot-starter:${project.ext.springGrpcVersion}"
 //    implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
 
