--- a/rangiffler-gateway/src/main/resources/application.yml
+++ b/rangiffler-gateway/src/main/resources/application.yml
@@ -7,8 +7,6 @@ oauth2:
 spring:
   application:
     name: rangiffler-gateway
-  profiles:
-    active: local
   graphql:
     graphiql:
       enabled: true
@@ -23,7 +21,7 @@ spring:
     schema:
       introspection:
         enabled: true
-    observation:               # <-- ДОБАВЛЕНО: включаем GraphQL Observation
+    observation:
       enabled: true
 
 logging:
@@ -39,21 +37,20 @@ logging:
 
 rangiffler-userdata:
   client: grpc
-
 rangiffler-geo:
   client: grpc
 
-management:                   # <-- ДОБАВЛЕНО: включаем Micrometer Tracing
+management:           # <--Micrometer Tracing
   tracing:
     enabled: true
     sampling:
-      probability: 1.0        # 100% семплинг для локальной отладки
+      probability: 1.0
 
 ---
 spring:
   config:
     activate:
-      on-profile: 'local'
+      on-profile: local
   autoconfigure:
     exclude:
       - 'org.springframework.cloud.vault.config.VaultAutoConfiguration'
@@ -99,7 +96,68 @@ minio:
   secret-key: rootroot
 
 app:
-  public-base-url: http://127.0.0.1:${server.port}   # ВАЖНО: абсолютный адрес gateway
+  public-base-url: http://127.0.0.1:${server.port}
   media:
     bucket: rangiffler-media
     cache-max-age-seconds: 31536000
+    allowed-mime:
+      - image/jpeg
+      - image/png
+      - image/gif
+      - image/webp
+
+
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+  autoconfigure:
+    exclude:
+      - 'org.springframework.cloud.vault.config.VaultAutoConfiguration'
+      - 'org.springframework.cloud.vault.config.VaultObservationAutoConfiguration'
+      - 'org.springframework.cloud.vault.config.VaultReactiveAutoConfiguration'
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: 'http://auth.rangiffler.dc:9001'
+
+grpc:
+  client:
+    grpcUserdataClient:
+      address: static://userdata.rangiffler.dc:8087
+      negotiationType: PLAINTEXT
+      max-inbound-message-size: 10485760
+    grpcGeoClient:
+      address: static://geo.rangiffler.dc:8086
+      negotiationType: PLAINTEXT
+    grpcPhotoClient:
+      address: static://photo.rangiffler.dc:8095
+      negotiationType: PLAINTEXT
+      max-inbound-message-size: 26214400
+
+rangiffler-front:
+  base-uri: 'http://frontend.rangiffler.dc'
+rangiffler-gateway:
+  base-uri: 'http://gateway.rangiffler.dc:8081'
+rangiffler-userdata:
+  base-uri: 'http://userdata.rangiffler.dc:8088'
+rangiffler-geo:
+  base-uri: 'http://geo.rangiffler.dc:8085'
+rangiffler-photo:
+  base-uri: 'http://photo.rangiffler.dc:8094'
+
+minio:
+  endpoint: http://minio:9000
+  access-key: root
+  secret-key: rootroot
+
+app:
+  # Внешний адрес для ссылок, которые увидит браузер.
+  # Т.к. порт 8081 проброшен на хост, используется localhost.
+  public-base-url: http://localhost:8081
+  media:
+    bucket: rangiffler-media
+    cache-max-age-seconds: 31536000
+    allowed-mime: [ image/jpeg, image/png, image/gif, image/webp ]
