--- a/rangiffler-photo/build.gradle
+++ b/rangiffler-photo/build.gradle
@@ -18,11 +18,18 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web-services') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
+
+    // === gRPC + Protobuf: минимум, чтобы не падал GeneratedMessageV3 ===
+    implementation "io.grpc:grpc-stub:${project.ext.grpcVersion}"
+    implementation "io.grpc:grpc-protobuf:${project.ext.grpcVersion}"
+    implementation "com.google.protobuf:protobuf-java:${project.ext.protobufVersion}"
+
+
     implementation "net.devh:grpc-client-spring-boot-starter:${project.ext.springGrpcVersion}"
     implementation "net.devh:grpc-server-spring-boot-starter:${project.ext.springGrpcVersion}"
-    implementation "com.google.protobuf:protobuf-java:3.25.5"
-    implementation "com.google.protobuf:protobuf-java-util:3.25.5"
-    implementation "com.google.protobuf:protobuf-java-util:3.25.5"
+    implementation "com.google.protobuf:protobuf-java-util:${project.ext.protobufVersion}"
+    implementation "io.grpc:grpc-netty-shaded:${project.ext.grpcVersion}"
+    implementation "io.grpc:grpc-services:${project.ext.grpcVersion}"
     implementation "org.springframework.kafka:spring-kafka:${project.ext.springKafkaVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-commons'
@@ -48,6 +55,39 @@ sourceSets {
         }
     }
 }
+
+jib {
+    container {
+        ports = ['8094']
+        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
+        environment = [
+                'VAULT_TOKEN': "${System.env.VAULT_TOKEN}".toString(),
+                'TZ'         : 'Europe/Moscow'
+        ]
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+        labels = [
+                'maintainer': 'Sentidas',
+                'version'   : "${project.version}".toString()
+        ]
+    }
+    from {
+        image = "${project.ext.dockerImage}"
+        platforms {
+            platform {
+                architecture = "${project.ext.dockerArch}"
+                os = 'linux'
+            }
+        }
+    }
+    to {
+        image = "${project.ext.dockerHubName}/${project.name}-${System.env.PROFILE}"
+        tags = ['latest', "${project.version}"]
+    }
+}
+
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
+
 
 
 tasks.named('bootJar') {
