--- a/rangiffler-geo/build.gradle
+++ b/rangiffler-geo/build.gradle
@@ -11,11 +11,11 @@ version = '1.0'
 dependencies {
     implementation project(':rangiffler-grpc-common')
 
+    implementation "io.grpc:grpc-stub:${project.ext.grpcVersion}"
+    implementation "io.grpc:grpc-protobuf:${project.ext.grpcVersion}"
+    implementation "com.google.protobuf:protobuf-java:${project.ext.protobufVersion}"
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation('org.springframework.boot:spring-boot-starter-web-services') {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-    }
-   // implementation 'io.opentelemetry:opentelemetry-api:1.28.0'
     implementation "net.devh:grpc-client-spring-boot-starter:${project.ext.springGrpcVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.micrometer:micrometer-registry-prometheus'
@@ -25,9 +25,13 @@ dependencies {
     implementation 'org.springframework.data:spring-data-commons'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    implementation "com.google.protobuf:protobuf-java-util:${project.ext.protobufVersion}"
+
+    implementation "io.grpc:grpc-services:${project.ext.grpcVersion}"
+
     implementation "net.devh:grpc-server-spring-boot-starter:${project.ext.springGrpcVersion}"
 //    implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
-    implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
 
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     compileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
@@ -39,6 +43,7 @@ dependencies {
     testImplementation "com.h2database:h2:${project.ext.h2Version}"
 }
 
+
 sourceSets {
     main {
         java {
@@ -46,6 +51,39 @@ sourceSets {
         }
     }
 }
+
+jib {
+    container {
+        ports = ['8085']
+        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
+        environment = [
+                'VAULT_TOKEN': "${System.env.VAULT_TOKEN}".toString(),
+                'TZ'         : 'Europe/Moscow'
+        ]
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+        labels = [
+                'maintainer': 'Sentidas',
+                'version'   : "${project.version}".toString()
+        ]
+    }
+    from {
+        image = "${project.ext.dockerImage}"
+        platforms {
+            platform {
+                architecture = "${project.ext.dockerArch}"
+                os = 'linux'
+            }
+        }
+    }
+    to {
+        image = "${project.ext.dockerHubName}/${project.name}-${System.env.PROFILE}"
+        tags = ['latest', "${project.version}"]
+    }
+}
+
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
+
 
 
 tasks.named('bootJar') {
