--- a/rangiffler-event-log/src/main/resources/application.yaml
+++ b/rangiffler-event-log/src/main/resources/application.yaml
@@ -19,12 +19,25 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
-        spring.json.value.default.type: ru.sentidas.rangiffler.events.ActivityEvent
+        spring.json.value.default.type: ru.sentidas.rangiffler.ActivityEvent
     listener:
       ack-mode: BATCH
       missing-topics-fatal: false
 
 app:
-  activity-topic: rangiffler.activity        # ????? ??? ??????-???????
-  # dlt-topic ????? ???????? ????? ??? ??????-?????
+  activity-topic: rangiffler_activity
 
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+  datasource:
+    url: jdbc:mysql://rangiffler-all-db:3306/rangiffler-event?serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: root
+    password: root
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+
+app:
+  activity-topic: rangiffler_activity
