--- a/rangiffler-auth/src/main/resources/application.yaml
+++ b/rangiffler-auth/src/main/resources/application.yaml
@@ -8,11 +8,11 @@ server:
 spring:
   application:
     name: rangiffler-auth
-  profiles:
-    active: local
   mvc:
     log-request-details: true
   datasource:
+    username: root
+    password: root
     hikari:
       connection-timeout: 20000
       minimum-idle: 10
@@ -35,7 +35,7 @@ spring:
           lob:
             non_contextual_creation: true
         format_sql: true
-    database-platform: org.hibernate.dialect.MySQLDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     generate-ddl: true
     open-in-view: false
@@ -47,6 +47,16 @@ logging:
     org.springframework.security: DEBUG
     org.springframework.security.oauth2: DEBUG
     org.springframework.boot.autoconfigure: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+
+oauth2:
+  client-id: client
+
 ---
 spring:
   config:
@@ -67,6 +77,27 @@ rangiffler-front:
   base-uri: 'http://127.0.0.1:3001'
 rangiffler-auth:
   base-uri: 'http://127.0.0.1:9001'
+
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+  autoconfigure:
+    exclude:
+      - 'org.springframework.cloud.vault.config.VaultAutoConfiguration'
+      - 'org.springframework.cloud.vault.config.VaultObservationAutoConfiguration'
+      - 'org.springframework.cloud.vault.config.VaultReactiveAutoConfiguration'
+  kafka:
+    bootstrap-servers: kafka:9092
+  datasource:
+    url: 'jdbc:mysql://rangiffler-all-db:3306/rangiffler-auth?serverTimezone=UTC&createDatabaseIfNotExist=true'
+    username: root
+    password: root
+
+rangiffler-front:
+  base-uri: 'http://frontend.rangiffler.dc'
+rangiffler-auth:
+  base-uri: 'http://auth.rangiffler.dc:9001'
 oauth2:
   client-id: 'client'
-
