refactor(e-2-e-tests): update tests, images test, pages files

--- a/rangiffler-e-2-e-tests/Dockerfile
+++ b/rangiffler-e-2-e-tests/Dockerfile
@@ -5,6 +5,7 @@ ENV TZ=Europe/Moscow
 COPY ./gradle ./gradle
 COPY ./rangiffler-e-2-e-tests ./rangiffler-e-2-e-tests
 COPY ./rangiffler-grpc-common ./rangiffler-grpc-common
+COPY ./rangiffler-media-common ./rangiffler-media-common
 COPY ./gradlew ./
 RUN sed -i -e 's/\r$//' gradlew && chmod +x gradlew
 COPY ./build.gradle ./
