--- a/rangiffler-userdata/build.gradle
+++ b/rangiffler-userdata/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     implementation "org.springframework.kafka:spring-kafka:3.3.2"
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
 
+    // === gRPC + Protobuf: минимум, чтобы не падал GeneratedMessageV3 ===
+    implementation "io.grpc:grpc-stub:${project.ext.grpcVersion}"
+    implementation "io.grpc:grpc-protobuf:${project.ext.grpcVersion}"
+    implementation "com.google.protobuf:protobuf-java:${project.ext.protobufVersion}"
+
     // --- Работа с изображениями (MinIO + thumbnail (small avatar) + декодер WebP) ---
     implementation "io.minio:minio:${project.ext.minioVersion}"
     implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
@@ -48,6 +53,38 @@ sourceSets {
         }
     }
 }
+
+jib {
+    container {
+        ports = ['8088']
+        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
+        environment = [
+                'VAULT_TOKEN': "${System.env.VAULT_TOKEN}".toString(),
+                'TZ'         : 'Europe/Moscow'
+        ]
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+        labels = [
+                'maintainer': 'Sentidas',
+                'version'   : "${project.version}".toString()
+        ]
+    }
+    from {
+        image = "${project.ext.dockerImage}"
+        platforms {
+            platform {
+                architecture = "${project.ext.dockerArch}"
+                os = 'linux'
+            }
+        }
+    }
+    to {
+        image = "${project.ext.dockerHubName}/${project.name}-${System.env.PROFILE}"
+        tags = ['latest', "${project.version}"]
+    }
+}
+
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
 
 
 tasks.named('bootJar') {
