feat(rangiffler): add docker-compose files for local and docker profile

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'rangiffler-photo'
 include 'rangiffler-e-2-e-tests'
 include 'rangiffler-grpc-common'
 include 'rangiffler-events-common'
+include 'rangiffler-media-common'
 include 'rangiffler-event-log'
 
 
