--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ subprojects {
 
         lombokVersion = '1.18.34'
         springKafkaVersion = '3.3.2'
-       // springVaultVersion = '4.2.0'
+        springVaultVersion = '4.2.0'
         springOpenApiVersion = '2.8.3'
         flywayVersion = '10.17.1'
         springGrpcVersion = '3.1.0.RELEASE'
@@ -37,6 +37,9 @@ subprojects {
         thumbnailatorVersion = '0.4.20'
         h2Version = '2.3.232'
         mockitoVersion = '5.12.0'
+        minioVersion      = '8.5.9'
+        mysqlVersion      = '8.0.33'
+        imageioWebpVersion = '3.12.0'
 
         dockerImage = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                 ? "arm64v8/eclipse-temurin:21-jdk"
