--- a/rangiffler-auth/src/main/resources/application.yaml
+++ b/rangiffler-auth/src/main/resources/application.yaml
@@ -98,6 +98,6 @@ spring:
 rangiffler-front:
   base-uri: 'http://frontend.rangiffler.dc'
 rangiffler-auth:
-  base-uri: 'http://auth.rangiffler.dc:9001'
+  base-uri: 'http://auth:9001'
 oauth2:
   client-id: 'client'
