--- a/rangiffler-e-2-e-tests/build.gradle
+++ b/rangiffler-e-2-e-tests/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         selenideVersion = '7.9.4'
         okhttp3Version = '4.11.0'
         retrofitVersion = '2.11.0'
+        mysqlDriverVersion = '8.4.0'
         apollographqlVersion = '0.0.2'
         logbackVersion = '1.4.11'
         slf4jVersion = '2.0.9'
@@ -14,14 +15,20 @@ buildscript {
         hibernateVersion = '6.6.0.Final'
         kafkaClientsVersion = '3.8.0'
         saajVersion = '3.0.4'
-       // jakartaJaxbVersion = '4.0.2'
         springDataCommonsVersion = '3.3.3'
         atomicosVersion = '6.0.0'
+        apollographqlVersion = '0.0.2'
+        apolloAdaptersVersion = '0.7.0'
         wiremockVersion = '3.0.1'
         fakerVersion = '1.0.2'
         ashotVersion = '1.5.4'
+        assertjVersion = '3.27.3'
+        commonsIoVersion  = '2.16.1'
+        jsr305Version = '3.0.2'
+        sqlFormatterVersion = '2.0.5'
+        simpleJndiVersion = '0.24.0'
         gatewayIntrospectionUrl = System.getProperty("test.env") == "docker"
-                ? "http://gateway.rangiffler.dc:8081/graphql"
+                ? "http://gateway:8081/graphql"
                 : "http://127.0.0.1:8081/graphql"
     }
 }
@@ -91,23 +98,14 @@ dependencies {
         exclude group: "com.squareup.okhttp3"
     }
     testImplementation "org.springframework.data:spring-data-commons:${springDataCommonsVersion}"
-    // DB
-  //  testImplementation "org.springframework:spring-jdbc:${springJdbcVersion}"
-
-    testImplementation "com.atomikos:transactions-jta:${atomicosVersion}:jakarta"
-    // bd
-    testImplementation "com.mysql:mysql-connector-j:8.4.0"
-    testImplementation "org.hibernate:hibernate-core:6.6.0.Final"
-    testImplementation "com.atomikos:transactions-jta:6.0.0:jakarta"
-    testImplementation "com.atomikos:transactions-jdbc:6.0.0"
-    testImplementation "com.atomikos:transactions-hibernate4:6.0.0:jakarta"
-    //redis
-    testImplementation 'redis.clients:jedis:5.1.2'
-
-
-    testImplementation "p6spy:p6spy:${p6spyVersion}"
-
     testImplementation "org.springframework.security:spring-security-crypto:${springCryptoVersion}"
+    // DB
+    testImplementation "com.mysql:mysql-connector-j:${mysqlDriverVersion}"
+    testImplementation "org.hibernate:hibernate-core:${hibernateVersion}"
+    testImplementation "com.atomikos:transactions-jta:${atomicosVersion}:jakarta"
+    testImplementation "com.atomikos:transactions-jdbc:${atomicosVersion}"
+    testImplementation "com.atomikos:transactions-hibernate4:${atomicosVersion}:jakarta"
+    testImplementation "p6spy:p6spy:${p6spyVersion}"
     // Allure
     testImplementation "io.qameta.allure:allure-attachments:${allureVersion}"
     testImplementation("io.qameta.allure:allure-junit5:${allureVersion}") {
@@ -121,30 +119,22 @@ dependencies {
     // WEB
     testImplementation "com.codeborne:selenide:${selenideVersion}"
     // Assert
-    testImplementation 'org.assertj:assertj-core:3.27.3'
+    testImplementation "org.assertj:assertj-core:${assertjVersion}"
     // Utils
     testImplementation "ru.yandex.qatools.ashot:ashot:${ashotVersion}"
     testImplementation("com.github.javafaker:javafaker:${fakerVersion}") {
         exclude group: 'org.yaml'
     }
-    testImplementation 'commons-io:commons-io:2.16.1'
-    testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
-    testImplementation 'com.github.vertical-blank:sql-formatter:2.0.5'
-    testImplementation 'com.github.h-thurow:simple-jndi:0.24.0'
     // GraphQL
     testImplementation "com.apollographql.java:client:${apollographqlVersion}"
     testImplementation "com.apollographql.java:rx2:${apollographqlVersion}"
-    testImplementation 'com.apollographql.adapters:apollo-adapters-core:0.7.0'
+    testImplementation "com.apollographql.adapters:apollo-adapters-core:${apolloAdaptersVersion}"
     // gRPC
     testImplementation "io.grpc:grpc-api:${project.ext.grpcVersion}"
     testImplementation "io.grpc:grpc-stub:${project.ext.grpcVersion}"
     testImplementation "io.grpc:grpc-netty:${project.ext.grpcVersion}"
     testImplementation "com.google.protobuf:protobuf-java:${project.ext.protobufVersion}"
     testImplementation "com.google.protobuf:protobuf-java-util:${project.ext.protobufVersion}"
-    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
-    testImplementation "com.mysql:mysql-connector-j:8.4.0"
-    testImplementation "net.coobird:thumbnailator:0.4.20"
-
     // Kafka
     testImplementation "org.apache.kafka:kafka-clients:${kafkaClientsVersion}"
     // Wiremock
@@ -153,7 +143,14 @@ dependencies {
     // Lombok
     testAnnotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     testCompileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
-
+    //  Вспомогательные утилиты
+    testImplementation("com.github.javafaker:javafaker:${fakerVersion}")
+            { exclude group: 'org.yaml' }
+    testImplementation "commons-io:commons-io:${commonsIoVersion}"
+    testImplementation "com.google.code.findbugs:jsr305:${jsr305Version}"
+    testImplementation "com.github.vertical-blank:sql-formatter:${sqlFormatterVersion}"
+    testImplementation "com.github.h-thurow:simple-jndi:${simpleJndiVersion}"
+    testImplementation "net.coobird:thumbnailator:${thumbnailatorVersion}"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -173,15 +170,10 @@ tasks.named("compileTestJava").configure {
     dependsOn("generateRangifflerApolloSources")
 }
 
-// ======================== ОСНОВНОЙ ПРОГОН ТЕСТОВ ========================
-// - запускает все обычные тесты
-// - ИСКЛЮЧАЕТ пост-проверку по тегу 'redis-postcheck', чтобы она не оказалась "в середине"
 test {
     options {
         systemProperties(System.getProperties())
     }
-
-    // ваши системные проперти — оставляем
     systemProperty "com.atomikos.icatch.default_jta_timeout", "60000"
     systemProperty "com.atomikos.icatch.max_timeout", "300000"
     systemProperty "com.atomikos.icatch.enable_logging", "true"
@@ -191,54 +183,5 @@ test {
     testLogging.exceptionFormat = 'full'
 
     useJUnitPlatform {
-        // 🔴 ВАЖНО: исключаем тег пост-проверки из основного прогона
-     //   excludeTags 'redis-postcheck'
     }
 }
-
-//// ======================== ПОСТ-ПРОВЕРКА REDIS ===========================
-//// - отдельная задача, которая запускает ТОЛЬКО тесты с тегом 'redis-postcheck'
-//// - тот же classpath и та же среда, что у обычного test
-//tasks.register('redisPostcheck', Test) {
-//    description = 'Пост-проверка Redis после всех тестов'
-//    group = 'verification'
-//
-//    // тот же набор классов и classpath, что у test
-//    testClassesDirs = sourceSets.test.output.classesDirs
-//    classpath = sourceSets.test.runtimeClasspath
-//
-//    useJUnitPlatform {
-//        // 🟢 Берём только пост-проверочные тесты
-//        includeTags 'redis-postcheck'
-//    }
-//
-//    // те же системные проперти — чтобы окружение совпадало
-//    options { systemProperties(System.getProperties()) }
-//    systemProperty "com.atomikos.icatch.default_jta_timeout", "60000"
-//    systemProperty "com.atomikos.icatch.max_timeout", "300000"
-//    systemProperty "com.atomikos.icatch.enable_logging", "true"
-//    systemProperty "com.atomikos.icatch.log_base_dir", "${buildDir}/atomikos"
-//
-//    // без параллельных forkов — стабильнее для финальной проверки
-//    maxParallelForks = 1
-//
-//    testLogging.showStandardStreams = true
-//    testLogging.exceptionFormat = 'full'
-//}
-//
-//// =================== СВЯЗЬ: «ПОСЛЕ test ЗАПУСТИ postcheck» =============
-//// - finalizedBy гарантирует запуск redisPostcheck ПОСЛЕ завершения test
-//// - сработает и из Gradle CLI, и из IDEA при делегировании тестов Gradle’у
-//tasks.named('test') {
-//    finalizedBy tasks.named('redisPostcheck')
-//}
-//
-//// (опционально) Включить в check явную зависимость от test
-//// check и так потянет test (а finalizedBy запустит postcheck).
-//// Оставляю для наглядности жизненного цикла.
-//tasks.named('check') {
-//    dependsOn tasks.named('test')
-//}
-//
-
-
