--- a/rangiffler-geo/src/main/resources/application.yaml
+++ b/rangiffler-geo/src/main/resources/application.yaml
@@ -126,15 +126,15 @@ spring:
 grpc:
   client:
     grpcUserdataClient:
-      address: static://userdata.rangiffler.dc:8087
+      address: static://userdata:8087
       negotiationType: PLAINTEXT
     grpcPhotoClient:
-      address: static://photo.rangiffler.dc:8095
+      address: static://photo:8095
       negotiationType: PLAINTEXT
 
 rangiffler-geo:
-  base-uri: http://geo.rangiffler.dc:8085
+  base-uri: http://geo:8085
 rangiffler-userdata:
-  base-uri: http://userdata.rangiffler.dc:8088
+  base-uri: http://userdata:8088
 rangiffler-photo:
-  base-uri: http://photo.rangiffler.dc:8094
+  base-uri: http://photo:8094
