--- a/rangiffler-gateway/src/main/resources/application.yml
+++ b/rangiffler-gateway/src/main/resources/application.yml
@@ -121,32 +121,32 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: 'http://auth:9001'
+          issuer-uri: 'http://auth.rangiffler.dc:9001'
 
 grpc:
   client:
     grpcUserdataClient:
-      address: 'static://userdata:8087'
+      address: 'dns:///userdata.rangiffler.dc:8087'
       negotiationType: PLAINTEXT
       max-inbound-message-size: 10485760
     grpcGeoClient:
-      address: 'static://geo:8086'
+      address: 'dns:///geo.rangiffler.dc:8086'
       negotiationType: PLAINTEXT
     grpcPhotoClient:
-      address: 'static://photo:8095'
+      address: 'dns:///photo.rangiffler.dc:8095'
       negotiationType: PLAINTEXT
       max-inbound-message-size: 26214400
 
 rangiffler-front:
   base-uri: 'http://frontend.rangiffler.dc'
 rangiffler-gateway:
-  base-uri: 'http://gateway:8081'
+  base-uri: 'http://gateway.rangiffler.dc:8081'
 rangiffler-userdata:
-  base-uri: 'http://userdata:8088'
+  base-uri: 'http://userdata.rangiffler.dc:8088'
 rangiffler-geo:
-  base-uri: 'http://geo:8085'
+  base-uri: 'http://geo.rangiffler.dc:8085'
 rangiffler-photo:
-  base-uri: 'http://photo:8094'
+  base-uri: 'http://photo.rangiffler.dc:8094'
 
 minio:
   endpoint: http://minio:9000
@@ -154,10 +154,7 @@ minio:
   secret-key: rootroot
 
 app:
-  # Внешний адрес для ссылок, которые увидит браузер.
-  # Т.к. порт 8081 проброшен на хост, используется localhost.
-  # public-base-url: http://localhost:8081
-  public-base-url: http://gateway.rangiffler.dc:8081
+  public-base-url: 'http://gateway.rangiffler.dc:8081'
   media:
     bucket: rangiffler-media
     cache-max-age-seconds: 31536000
